--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,31 @@
+.header-logo {
+  width: 200px;
+  height: 200px;
+  margin-left: 50px;
+}
+
+.header-h1 {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 60px;
+  margin: auto auto;
+}
+
+.start-page {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+}
+
+.start-page-marcus {
+  max-width: 500px;
+}
+
+/*@font-face {
+  font-family: "Sen";
+  src: url("https://fonts.googleapis.com/css2?family=Sen&display=swap");
+}*/
+
 /*.App {
   text-align: left;
 }
