--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,35 @@
-.header-logo {
-  width: 200px;
-  height: 200px;
-  margin-left: 50px;
+.App {
+  max-width: 1200px;
+  margin: auto auto;
 }
 
-.header-h1 {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 60px;
+.start-page-h1 {
+  font-family: "Baloo";
+  font-size: 80px;
   margin: auto auto;
 }
 
 .start-page {
-  max-width: 1200px;
-  margin: 0 auto;
   display: flex;
+  margin-top: 200px;
+}
+
+.greeting-start-page-h1 {
+  color: #444849;
 }
 
 .start-page-marcus {
-  max-width: 500px;
+  max-width: 600px;
+}
+
+@font-face {
+  font-family: "Baloo";
+  src: local("Baloo"), url(./fonts/BalooThambi2-Regular.ttf) format("truetype");
+}
+
+.marcus-start-page-h1 {
+  color: #f42f46;
+  margin-top: -40px;
 }
 
 /*@font-face {
